--- a/Huiswerk_Les_12/Index.html
+++ b/Huiswerk_Les_12/Index.html
@@ -15,27 +15,27 @@
         <table class="Table"> 
             <tr>
                 <td id="cel_01">Cel 1</td>
-                <td id="cel_02"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_02"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
                 <td id="cel_03">Cel 3</td>
-                <td id="cel_04"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_04"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
             </tr>
             <tr>
                 <td id="cel_05">Cel 5</td>
-                <td id="cel_06"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_06"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
                 <td id="cel_07">Cel 7</td>
-                <td id="cel_08"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_08"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
             </tr>
             <tr>
                 <td id="cel_09">Cel 9</td>
-                <td id="cel_10"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_10"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
                 <td id="cel_11">Cel 11</td>
-                <td id="cel_12"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_12"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
             </tr>
             <tr>
                 <td id="cel_13">Cel 13</td>
-                <td id="cel_14"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_14"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
                 <td id="cel_15">Cel 15</td>
-                <td id="cel_16"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" height="50"></td>
+                <td id="cel_16"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Lorem Ipsum Logo" height="50"></td>
             </tr>
         </table>
 
