--- a/Huiswerk_Les_12/Index.html
+++ b/Huiswerk_Les_12/Index.html
@@ -15,25 +15,25 @@
         <table class="Table"> 
             <tr>
                 <td id="cel_01">Cel 1</td>
-                <td id="cel_02"><img src="IMG/Boromir.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_02"><img src="IMG/Boromir.jpg" alt="Boromir" title="One does not simply..." class="image"></td>
                 <td id="cel_03">Cel 3</td>
-                <td id="cel_04"><img src="IMG/Clever.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_04"><img src="IMG/Clever.jpg" alt="Clever meme" title="Very clever" class="image"></td>
             </tr>
             <tr>
                 <td id="cel_05">Cel 5</td>
-                <td id="cel_06"><img src="IMG/GrumpyCat.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_06"><img src="IMG/GrumpyCat.jpg" alt="Grumpy Cat" title="Grumpy Cat" class="image"></td>
                 <td id="cel_07">Cel 7</td>
-                <td id="cel_08"><img src="IMG/Harold.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_08"><img src="IMG/Harold.jpg" alt="Hide the pain Harold" title="Hide the pain Harold" class="image"></td>
             </tr>
             <tr>
                 <td id="cel_09">Cel 9</td>
-                <td id="cel_10"><img src="IMG/Rick.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_10"><img src="IMG/Rick.jpg" alt="Rick Roll" title="Never Gonna Give You Up" class="image"></td>
                 <td id="cel_11">Cel 11</td>
-                <td id="cel_12"><img src="IMG/Sparta.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_12"><img src="IMG/Sparta.jpg" alt="This is Sparta!" title="This is Sparta!" class="image"></td>
             </tr>
             <tr>
                 <td id="cel_13">Cel 13</td>
-                <td id="cel_14"><img src="IMG/Trollface.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
+                <td id="cel_14"><img src="IMG/Trollface.jpg" alt="Trollface" title="Trollface.jpg" class="image"></td>
                 <td id="cel_15">Cel 15</td>
                 <td id="cel_16"><img src="IMG/lorem_ipsum.jpg" alt="Lorem Ipsum logo" title="Loren Ipsum Logo" class="image"></td>
             </tr>
